# nrf5340-led-demo

./: .gitignore  CMakeLists.txt  COMMAND_USAGE.md  FLASHING_GUIDE.md  LICENSE  README.md  build.sh  prj.conf  test_commands.py  west.yml
boards/: nrf5340dk_nrf5340_cpuapp.overlay
src/: main.c
